[tool.poetry]
name = "motrpac-backend-utils"
version = "0.7.0"
description = ""
authors = ["Mihir Samdarshi <msamdars@stanford.edu>"]
packages = [{ include = "motrpac_backend_utils" }]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
flask = { version = "^3.0.0", optional = true }
google-auth = "^2.19.1"
google-cloud-logging = "^3.2.2"
google-cloud-pubsub = { version = "^2.13.6", optional = true }
google-cloud-storage = { version = "^2.5.0", optional = true }
opentelemetry-api = "*"
opentelemetry-exporter-gcp-trace = "*"
opentelemetry-instrumentation-requests = "*"
opentelemetry-instrumentation-urllib3 = "*"
opentelemetry-propagator-gcp = "*"
opentelemetry-sdk = "*"
protobuf = { version = "^4.21.1", optional = true }
psutil = { version = "^5.9.0", optional = true }
smart-open = { version = "^6.0.0", optional = true }
typing-extensions = "^4.3.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
mypy = "^1.3.0"
ruff = ">=0.2.1"

[tool.ruff]
line-length = 90
target-version = "py311"
exclude = ["*_pb2.py", "*_pb2.pyi"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN002",
    "ANN003",
    "ANN101",
    "ANN102",
    "ANN401",
    "BLE001",
    "D104",
    "D105",
    "D107",
    "D200",
    "D203",
    "D205",
    "D212",
    "D401",
    "DTZ",
    "I001",
    "INP001",
    "E501",
    "F401",
    "PLR2004"
]

[tool.ruff.lint.per-file-ignores]
"test/*.py" = ["D100", "D101", "D102", "D103", "S101"]

[tool.poetry.extras]
zipper = ["google-cloud-storage", "psutil", "smart-open", "google-cloud-pubsub", "protobuf"]
messaging = ["google-cloud-pubsub", "protobuf"]
flask = ["flask"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
