[project]
name = "motrpac-backend-utils"
version = "0.9.3"
description = "Common utilities for MoTrPAC services"
authors = [{ name = "Mihir Samdarshi", email = "msamdars@stanford.edu" }]
license = "Apache-2.0"
requires-python = ">=3.11,<3.14"

dependencies = [
    "google-auth",
    "google-cloud-logging",
    "opentelemetry-api",
    "opentelemetry-exporter-gcp-trace>=1.7.0",
    "opentelemetry-instrumentation-logging",
    "opentelemetry-instrumentation-threading",
    "opentelemetry-instrumentation-urllib3",
    "opentelemetry-propagator-gcp",
    "opentelemetry-sdk",
    "typing-extensions",
]

[project.optional-dependencies]
zipper = [
    "google-cloud-storage",
    "google-cloud-pubsub",
    "psutil",
    "smart-open",
    "protobuf~=4.21"
]
messaging = ["google-cloud-pubsub", "protobuf~=4.21"]
flask = ["flask"]

[dependency-groups]
dev = ["ruff", "isort"]
test = ["pytest~=8.2.2", "pytest-mock~=3.14",  "pytest-cov~=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

# Which packages we want to build/distribute.
# There are also ways of including additional files, such as data files.
# See the Hatch documentation for more information.
[tool.hatch.build.targets.wheel]
packages = ["src/motrpac_backend_utils"]

# Pytest is a testing framework for Python.
[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra", "--full-trace",
    "--import-mode=importlib",
]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 90
target-version = "py311"
exclude = ["*_pb2.py", "*_pb2.pyi"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN002",
    "ANN003",
    "ANN401",
    "BLE001",
    "D104",
    "D105",
    "D107",
    "D200",
    "D203",
    "D205",
    "D212",
    "D401",
    "DTZ",
    "I001",
    "INP001",
    "E501",
    "F401",
    "PLR2004"
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D100", "D101", "D102", "D103", "S101", "S108", "SLF001"]
